--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:3306/techjobs_auth
+spring.datasource.url=jdbc:mysql://localhost:3306/techjobs_auth?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=techjobs_auth
-spring.datasource.password=auth
+spring.datasource.password=abcd4301B
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
